@@ -69,10 +69,21 @@ Information about older versions may be found <a href="http://pwsafe.org/history
 
 <h4><a name="V3.28.1New"></a>New Features for V3.28.1</h4>
 
+<table>
+<tbody>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3510481);return false;">3510481</a></td>
+<td>If the Record Last Modified and Password Modified date/times have not been set (e.g. the
+entry has not been changed since it was created, then the entry creation date/time is displayed.
+If the entry was created before PasswordSafe saved these fields, then all fields may still be blank.
+Note: This is a change to what is displayed and the entries are not updated to populate these fields.</td>
+</tr>
 <tr>
 <td align="center" width="100">n/a</td>
 <td>Portuguese (Brazil) installation instructions added, thanks to Andreas.</td>
 </tr>
+</tbody>
+</table>
 
 <h4><a name="V3.28.1Changes"></a>Changes to Existing Features in V3.28.1</h4>
 
